--- a/JKD/JKD.csproj
+++ b/JKD/JKD.csproj
@@ -384,6 +384,7 @@
     </Compile>
     <Compile Include="utils\AppconfigHelper.cs" />
     <Compile Include="utils\ExcelHelper.cs" />
+    <Compile Include="utils\ImageConvert.cs" />
     <Compile Include="utils\PinyinHelper.cs" />
     <Compile Include="utils\RmbHelper.cs" />
     <Compile Include="ViewModels\FyFormViewModel.cs" />
