2020年10月7日22时42分59秒

--- a/JKD/App.config
+++ b/JKD/App.config
@@ -15,7 +15,7 @@
   </appSettings>
   <connectionStrings>
     <add name="JKD.Properties.Settings.jkdConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\jkd.accdb" providerName="System.Data.OleDb" />
-    <add name="mysqlConnectionStr" connectionString="server=172.20.93.19;uid=root;pwd=541800;database=webdb"></add>
+    <add name="mysqlConnectionStr" connectionString="server=localhost;uid=root;pwd=541800;database=wsy"></add>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
